fix: resolve option selection issue on mobile

--- a/web-app/style.css
+++ b/web-app/style.css
@@ -163,6 +163,7 @@ label {
   color: var(--psycho-text);
   user-select: none;
   -webkit-user-select: none;
+  -webkit-touch-callout: none;
   touch-action: manipulation;
 }
 
